[gd_scene load_steps=2 format=1]

[ext_resource path="res://Scripts/pause_menu.gd" type="Script" id=1]

[node name="pause_menu" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="Popup" type="Popup" parent="."]

process/pause_mode = 2
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 512.0
margin/top = 400.0
margin/right = -518.0
margin/bottom = -400.0
popup/exclusive = false

[node name="Continue" type="Button" parent="Popup"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 140.0
margin/top = 250.0
margin/right = 520.0
margin/bottom = 290.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Continue"
flat = false

[node name="Restart" type="Button" parent="Popup"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 140.0
margin/top = 370.0
margin/right = 520.0
margin/bottom = 410.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Restart"
flat = false

[node name="Quit" type="Button" parent="Popup"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 140.0
margin/top = 490.0
margin/right = 520.0
margin/bottom = 530.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Quit"
flat = false

[connection signal="pressed" from="Popup/Continue" to="." method="_on_Continue_pressed"]

[connection signal="pressed" from="Popup/Restart" to="." method="_on_Restart_pressed"]

[connection signal="pressed" from="Popup/Quit" to="." method="_on_Quit_pressed"]


